# smartdrop-contracts

./: .gitignore  IMPLEMENTATION_NOTES.md  Makefile  README.md  TODO.md  stellar.toml
contracts/: README.md
soroban/contracts/factory/: Cargo.toml
soroban/contracts/factory/src/: lib.rs  test.rs  types.rs
soroban/contracts/factory/test_snapshots/: end_to_end_create_pool_then_lock_and_unlock.1.json  end_to_end_create_pool_then_stake_and_unstake.1.json  smoke_create_pool_returns_live_pool_address.1.json  test_create_pool_pool_admin_is_set_atomically.1.json  test_third_party_cannot_reinitialize_deployed_pool.1.json
soroban/contracts/factory/test_snapshots/test/: test_admin_getter_returns_stored_address.1.json  test_create_pool_admin_matches_factory_admin_at_creation_time.1.json  test_create_pool_at_max_pool_count_returns_overflow_error.1.json  test_create_pool_configures_deployed_pool_matching_factory_record.1.json  test_create_pool_emits_pool_crtd_event.1.json  test_create_pool_emits_pool_crtd_event_with_payload.1.json  test_create_pool_increments_count_after_each_pool.1.json  test_create_pool_non_admin_rejected.1.json  test_create_pool_non_admin_rejected.2.json  test_create_pool_records_zero_daily_rate.1.json  test_create_pool_rejects_daily_rate_below_ledgers_per_day.1.json  test_create_pool_rejects_unmatched_non_admin_auth.1.json  test_create_pool_rejects_zero_daily_rate.1.json  test_create_pool_returns_incrementing_ids.1.json  test_create_pool_uses_deterministic_pool_addresses.1.json  test_get_pool_bumps_pool_record_ttl.1.json  test_get_pool_returns_correct_record.1.json  test_get_pools_by_asset_paginates_large_matching_registry.1.json  test_get_pools_by_asset_returns_empty_when_no_pools.1.json  test_get_pools_by_asset_returns_matching_ids.1.json  test_get_pools_by_asset_unknown_asset_returns_empty.1.json  test_initialize_sets_admin.1.json  test_list_pools_caps_limit_at_twenty.1.json  test_list_pools_returns_empty_when_start_is_beyond_count.1.json  test_list_pools_returns_first_page.1.json  test_list_pools_returns_partial_last_page.1.json  test_list_pools_returns_second_page.1.json  (+15 more)
soroban/contracts/factory/tests/: factory_pool_integration.rs
soroban/contracts/farming-pool/: Cargo.toml
soroban/contracts/farming-pool/src/: lib.rs  mock_reentrant_token.rs  test.rs  types.rs
(+89 files in other folders)
