[package]
name    = "factory"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest    = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
farming-pool = { path = "../farming-pool" }
soroban-sdk = { workspace = true, features = ["testutils"] }
