[package]
name    = "farming-pool"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest    = false

[features]
# Enables `farming_pool::WASM` — the compiled contract bytes for use in
# cross-crate integration tests (e.g. factory's test suite).
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
